<resources>
    <string name="app_name">StarGaze</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup">SignUp</string>
    <string name="check_privacy">By Signing up you accept the Term and service \nand privacy policy.</string>
    <string name="accept_privacy">You are agree with Privacy ,Terms &amp; Conditions</string>
    <string name="already_user_sign_in">Already User?<b>SignIn</b></string>
    <string name="not_registered">Not a User? <b>SignUp</b></string>
    <string name="phone_verified">Successfully Verified</string>
    <string name="successfully_changed">Your Password has been \n change successfully.</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="forgot">Forgot</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password_changed">PASSWORD CHANGED</string>
    <string name="please_add_address">You don\'t have saved addresses,Please add your address!!</string>
    <string name="razor_api_key">rzp_live_VI8KAFnsfy9ctq</string>
    <string name="No_Data_Found">You haven\'t, made any order ,Please make an order first!!</string>


    <string name="nav_my_addresses">My Addresses</string>
    <string name="my_order">My Orders</string>
    <string name="my_wallet"> My SG Coins</string>
    <string name="my_referral">Referral Code</string>
    <string name="my_ticket">My Ticket</string>
    <string name="drawer_nav_about_us">About Us</string>
    <string name="drawer_nav_share">Share</string>
    <string name="drawer_nav_customer_support">Help</string>
    <string name="drawer_nav_blog">Blog</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="drawer_nav_logout">Logout</string>
    <string name="your_balance">Your Balance</string>
    <string name="amount">₹ 0.0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="you_are_not_a_user_please_login_or_register_first">You are not a user,please login or register first!</string>
    <string name="referral_code">Referral Code</string>
    <string name="your_code">Your Referral Code : </string>
    <string name="share_this_referral_code">Share this referral code with your friends   when they use this app you will get benefit of.</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>
    <string name="enter_referral_code">Enter Referral code</string>
    <string name="have_you_referral_code">Have you Referral Code?</string>
    <string name="book">Book</string>
    <string name="create_an_account">Create an account</string>
    <string name="discount_code_label">if you have discount code please enter</string>
    <string name="enter_discount_code">Enter Discount code</string>
    <string name="pay_with_razorpay">Pay With Razorpay</string>
    <string name="add_money">Add Money</string>
    <string name="txt_search_products">Search by event or artist...</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="yes">Yes</string>
<string name="termsancon">All the tickets sold by its company PIPT INNOVATIONS LLP shall be non-refundable and non-transferable. Recording, copying, uploading, re-posting of any of the program and/or any contents thereof  is not permitted and is strictly prohibited.
    Appropriate action shall be taken agaisnt the voilators. Exceptional circumstances like poor or no Inernet connectiity at the Artists’ end or for any other unaboidable reasons, the time and date of the show may vary and the revised time and shall be duly intimated to the ticket buyers through notification on the Net.
    By making a transaction on Stargaze the subscribers/users specificaly and clearly acknowledge that they have read, understood, accepted and agreed to all the terms and conditions of purchase of tickets and of Privacy Policy. These terms and conditions are subject which shall be notified from time to time.
</string>
    <string name="txt_plz_connect_internet">Please connect your internet connection.</string>
    <string name="exit_confirm">Are you sure want to exit.</string>
    <string name="okay">Okay</string>
</resources>
