<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">



    <TextView
        android:id="@+id/exitText"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/exit_confirm"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exitText"
        android:layout_marginBottom="2dp"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:textStyle="italic"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:paddingRight="10dp"
        android:paddingTop="10dp"

        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_launcher" />

    <View
        android:id="@+id/line_hor"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_below="@+id/icon"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_hor"
        android:layout_marginTop="@dimen/margin_32"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/rate_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/rate" />
        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/yes" />
    </LinearLayout>


</RelativeLayout>