<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/img_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:padding="@dimen/padding_10"
                    android:text="Referral Code"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/line_hor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_welcome"
                    android:layout_marginBottom="@dimen/margin_24"
                    android:layout_marginStart="@dimen/margin_10"
                    android:background="@drawable/line"
                    android:orientation="vertical" />

                <EditText
                    android:id="@+id/ed_referral_code"
                    style="@style/EditTextStyle"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/code"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/enter_referral_code" />


                <star.example.stargaze.utils.NeomorphFrameLayout
                    android:id="@+id/neu_mor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ed_referral_code"
                    android:layout_centerHorizontal="true"
                    app:neomorph_background_color="@color/button_color"
                    app:neomorph_corner_radius="7dp"
                    app:neomorph_elevation="8dp"
                    app:neomorph_highlight_color="@color/neomorph_highlight_color"
                    app:neomorph_shadow_color="@color/neomorph_shadow_color"
                    app:neomorph_shadow_type="inner"
                    app:neomorph_view_type="rectangular">

                    <TextView
                        android:id="@+id/tv_next_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingStart="@dimen/padding_24"
                        android:paddingTop="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_24"
                        android:paddingBottom="@dimen/padding_10"
                        android:text="@string/next"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold" />
                </star.example.stargaze.utils.NeomorphFrameLayout>


            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tv_skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_32"
            android:padding="@dimen/padding_16"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:elevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/img_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/bottom_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>