<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="star.example.stargaze.authentication.ResetPasswordActivity">
        <RelativeLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="6dp">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_16"
                android:padding="@dimen/padding_10"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/forgot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_5"
                android:text="@string/edit_profile"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_label_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_5"
            android:text="@string/you_are_not_a_user_please_login_or_register_first"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone"
           />
        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_gravity="center"
                android:orientation="vertical"

                >
                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:padding="@dimen/padding_10"
                    android:text="Update Details"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/line_hor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_welcome"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/margin_10"
                    android:background="@drawable/line"
                    android:layout_marginBottom="@dimen/margin_24"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/ed_edit_name"
                            style="@style/EditTextStyle1"
                            android:layout_gravity="start"
                            android:gravity="start|center"
                            android:paddingStart="@dimen/padding_16"
                            android:textAlignment="textStart"
                            android:textColor="@color/white" />



                        <EditText
                            android:id="@+id/ed_edit_phone"
                            style="@style/EditTextStyle1"
                            android:layout_gravity="start"
                            android:gravity="start|center"
                            android:inputType="none"
                            android:enabled="false"
                            android:paddingStart="@dimen/padding_16"
                            android:textAlignment="textStart"
                            android:textColor="@color/white" />


                        <EditText
                            android:id="@+id/ed_edit_email"
                            style="@style/EditTextStyle1"
                            android:layout_gravity="start"
                            android:gravity="start|center"
                            android:enabled="true"
                            android:paddingStart="@dimen/padding_16"
                            android:textAlignment="textStart"
                            android:textColor="@color/white" />


                        <EditText
                            android:id="@+id/ed_edit__old_pass"
                            style="@style/EditTextStyle1"
                            android:layout_gravity="start"
                            android:gravity="start|center"
                            android:inputType="textPassword"
                            android:hint="Old Password"
                            android:paddingStart="@dimen/padding_16"
                            android:textAlignment="textStart"
                            android:textColor="@color/white" />


                        <EditText
                            android:id="@+id/ed_edit_new_pass"
                            style="@style/EditTextStyle1"
                            android:layout_gravity="start"
                            android:gravity="start|center"
                            android:inputType="textPassword"
                            android:hint="New Password"
                            android:paddingStart="@dimen/padding_16"
                            android:textAlignment="textStart"
                            android:textColor="@color/white" />


                    <star.example.stargaze.utils.NeomorphFrameLayout
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        app:neomorph_view_type="rectangular"
                        app:neomorph_shadow_type="inner"
                        app:neomorph_elevation="1dp"
                        app:neomorph_corner_radius="7dp"
                        android:layout_marginTop="@dimen/margin_16"
                        app:neomorph_background_color="@color/button_color"
                        app:neomorph_shadow_color="@color/shadow_orange"
                        app:neomorph_highlight_color="@color/shadow_orange"
                        android:layout_gravity="center"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_update_btn"
                            android:text="@string/submit"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:paddingStart="@dimen/padding_24"
                            android:paddingEnd="@dimen/padding_24"
                            android:paddingTop="@dimen/padding_10"
                            android:paddingBottom="@dimen/padding_10"

                            />
                    </star.example.stargaze.utils.NeomorphFrameLayout>

                    <ProgressBar
                        android:id="@+id/otp_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/circle_shape"
                        android:indeterminateDrawable="@drawable/gradient_progress"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>